--- a/NotraMuse/Base.lproj/Main.storyboard
+++ b/NotraMuse/Base.lproj/Main.storyboard
@@ -1037,7 +1037,7 @@
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" image="music.quarternote.3" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="4Rm-zb-8nR">
-                                <rect key="frame" x="20" y="109" width="390" height="482.00000000000011"/>
+                                <rect key="frame" x="20" y="109" width="390" height="482.00000000000006"/>
                                 <color key="tintColor" systemColor="systemPurpleColor"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5yS-hZ-zqJ">
@@ -1716,7 +1716,7 @@
         <segue reference="HrV-gP-zpa"/>
         <segue reference="QFH-sX-Ogq"/>
         <segue reference="fpX-G7-EUX"/>
-        <segue reference="1ii-PK-iED"/>
+        <segue reference="n1s-ug-MG7"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="17611" width="512" height="512"/>
